# pablo-companion

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  Package.resolved  Package.swift  README.md  SECURITY.md  appcast.xml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.local.json
.claude/agents/: epic-team.md  impl-team.md  research-team.md
.claude/skills/: a11y.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-mac.yml  rust-security.yml  scorecard.yml  security.yml  windows.yml
01/26e61c9df0/: metadata.json
03/e52472420a/: metadata.json
0d/015c9e8c83/: metadata.json
1f/c37742e33e/: metadata.json
20/b752ebffe6/: metadata.json
25/3fd3354b78/: metadata.json
27/c6a7dfbaf0/: metadata.json
2a/d5e469811f/: metadata.json
36/701ccc8e67/: metadata.json
3c/226b6fcfaa/: metadata.json
3d/a9f51b7b94/: metadata.json
46/6348f5bfd6/: metadata.json
48/459ed06839/: metadata.json
4a/5beced1e33/: metadata.json
53/9386175306/: metadata.json
55/e111c3248e/: metadata.json
63/5f6f204f7a/: metadata.json
65/ec1d29294c/: metadata.json
6a/0e40e96de2/: metadata.json
70/a57be928c2/: metadata.json
74/73ec5c2275/: metadata.json
85/98011f7676/: metadata.json
87/553de235df/: metadata.json
8a/d06442e11a/: metadata.json
94/d46f6b04fe/: metadata.json
95/9e1ecced3c/: metadata.json
97/2cb9a71a12/: metadata.json
Sources/CompanionAuthCore/: AuthCoreConfig.swift  DPoPProof.swift  DeviceEnrollment.swift  DeviceKey.swift
Sources/CompanionSessionCore/: AudioUploadClient.swift  AudioUploadInitResponse.swift  AudioUploadResponse.swift  KeychainStoring.swift  Multipart.swift  PendingAudioUploadCoordinator.swift  PendingAudioUploadStore.swift  RecordingCleaner.swift  RecordingWatchdog.swift  SessionDataEncrypting.swift  SessionRecordingStore.swift  SessionUploadError.swift  WAVEncoder.swift
Sources/PracticeClientCore/: APIError.swift  AudioSeams.swift  PracticeAPIClient.swift  PracticeLog.swift  PracticeModels.swift  PracticeWebSocketClient.swift
Sources/practice-harness/: DPoPScenario.swift  DeviceBoundClient.swift  FirebaseAuth.swift  HarnessSupport.swift  PracticeHarness.swift  RecordScenario.swift  TOTP.swift
Tests/CompanionSessionCoreTests/: ADTSPassthroughTests.swift  AudioUploadClientTests.swift  AudioUploadTestSupport.swift  FakeSessionDataEncryptor.swift  PendingAudioUploadCoordinatorTests.swift  PendingAudioUploadStoreTests.swift  RecordingCleanerTests.swift  RecordingWatchdogTests.swift  SessionRecordingStoreTests.swift  SessionUploadErrorTests.swift  UploadLifecycleTests.swift
a7/3913a543b8/: metadata.json
aa/0c4f84db1b/: metadata.json
ae/4e503c4090/: metadata.json
af/06cba0a4f9/: metadata.json
core/: Cargo.toml  build.rs  deny.toml
core/src/: api_client.rs  audio_preprocessing.rs  google_meet_renderer.rs  lib.rs  models.rs  session_pipeline.rs  soap_entry.rs  whisper_transcriber.rs
core/src/ehr/: field_matcher.rs  mod.rs  model_prompt.rs  navigation.rs  recipe.rs  recipe_store.rs  tree_fingerprint.rs  tree_snapshot.rs
core/tests/: e2e_pipeline.rs
core/tests/support/: mod.rs  therapy_script_60min.rs
core/uniffi/: pablo_core.udl
docs/: accessibility.md  audio-transcription-design.md  audiocapturekit-separate-streams-design.md  beads-cleanup-2026-04.md  branding.md  companion-api-contract.md  design-audio-transcription-diarization.md  lightweight-model-research.md  practice-mode-design.md  practice-mode-windows-guide.md  recording-resilience.md  repo-setup-questions.md  soap-entry-agent-design.md  soap-entry-backend-context.md  windows-audio-capture-plan.md  windows-transcription-checklist.md
mac/: .swiftformat  .swiftlint.yml  ExportOptions.plist
scripts/: cdp_test.py  coverage-gate.sh
windows/: PabloCompanion.sln
(+601 files in other folders)
