[package]
name = "pablo-core"
version = "0.1.0"
edition = "2021"
description = "Shared business logic for Pablo Companion (macOS + Windows)"
license = "AGPL-3.0-only"

[lib]
name = "pablo_core"
crate-type = ["cdylib", "staticlib", "lib"]

# uniffi-bindgen binary: cargo run --bin uniffi-bindgen generate ...
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.31", features = ["tokio", "cli"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rubato = "0.16"
byteorder = "1"
thiserror = "1"
whisper-rs = "0.15"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.31", features = ["cli"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
