[package]
name = "pablo-core"
version = "1.0.0"
edition = "2021"
description = "Shared business logic for Pablo Companion (macOS + Windows)"
license = "AGPL-3.0-only"

[lib]
name = "pablo_core"
crate-type = ["staticlib", "cdylib", "lib"]

# uniffi-bindgen binary: cargo run --bin uniffi-bindgen generate ...
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
default = ["transcription"]
transcription = ["dep:whisper-rs", "dep:rubato", "dep:audioadapter-buffers", "dep:byteorder"]

[dependencies]
uniffi = { version = "0.31", features = ["tokio", "cli"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rubato = { version = "1.0", optional = true }
audioadapter-buffers = { version = "3.0", optional = true }
byteorder = { version = "1", optional = true }
thiserror = "2"
whisper-rs = { version = "0.15", optional = true }
secrecy = { version = "0.10", features = ["serde"] }
async-compat = "0.2"

reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "query"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"], optional = true }
reqwest = { version = "0.13", features = ["json", "multipart", "query"] }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "query", "native-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "query", "rustls"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.31", features = ["cli"] }
dotenvy = "0.15"
http = "1.4.0"
